# scrap-prices

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHECKPOINTS.md  CLAUDE.md  PRD_ConstruScan.md  README.md  dev-backend.sh  dev-frontend.sh  dev.sh  docker-compose.yml  feature_list.json  init.sh  scrap-prices.lnk
.claude/: settings.json
backend/: CLAUDE.md  conftest.py  manage.py  openapi.json  pyproject.toml
backend/apps/catalog/: admin.py  api.py  apps.py  models.py  normalization.py  schemas.py  services.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_canonicalproduct_mass_kg_retailerproduct_sale_unit.py
backend/apps/catalog/tests/: test_crudos_por_termino.py  test_detalle.py  test_live_search.py  test_models.py  test_normalization.py  test_search.py
backend/apps/common/: apps.py  models.py
backend/apps/core/: api.py  apps.py  models.py  schemas.py  services.py  tasks.py
backend/apps/core/management/commands/: seed.py
backend/apps/core/tests/: test_health.py  test_seed.py
backend/apps/geo/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend/apps/geo/migrations/: 0001_initial.py  0002_retailerlocation_extra.py
backend/apps/geo/tests/: test_api.py  test_models.py  test_retailers_api.py
backend/apps/lists/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend/apps/lists/migrations/: 0001_initial.py
backend/apps/lists/tests/: test_api.py  test_models.py
backend/apps/prices/: admin.py  apps.py  models.py  services.py
backend/apps/prices/migrations/: 0001_initial.py  0002_scraperun_search_term_scraperun_triggered_by.py  0003_priceobservation_scrape_run.py
backend/apps/prices/tests/: test_models.py
backend/apps/scraping/: apps.py  base.py  client.py  construrama.py  exceptions.py  homedepot.py  parsers.py  services.py  tasks.py
backend/apps/scraping/management/commands/: scrape.py
backend/apps/scraping/tests/: fakes.py  test_base.py  test_client.py  test_command_scrape.py  test_construrama.py  test_homedepot.py  test_parsers_construrama.py  test_parsers_homedepot.py  test_services.py
backend/apps/scraping/tests/fixtures/: construrama_sin_precio.json  construrama_varilla_algolia.json  homedepot_supersku_empty.json  homedepot_varilla_482588.json  homedepot_varilla_batch.json
backend/config/: __init__.py  api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: architecture.md  conventions-backend.md  conventions-frontend.md  mcp.md  testing-strategy.md  verification.md
e2e/: package.json  playwright.config.ts
frontend/: .env.example  .gitignore  CLAUDE.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
progress/: auditoria-arnes-2026-06-13.md  current.md  history.md  impl_F001_backend.md  impl_F002_frontend.md  impl_F003_backend.md  impl_F003_frontend.md  (+72 more)
(+105 files in other folders)
